--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 # DB URL
-spring.datasource.url=jdbc:mysql://localhost:3306/newcomin
-
+spring.datasource.url=jdbc:mysql://comin-db.cmdbeoqthlq5.ap-northeast-2.rds.amazonaws.com/comindata
 # DB username
 spring.datasource.username=root
 
@@ -8,4 +7,5 @@ spring.datasource.username=root
 spring.datasource.password=sj105110##
 
 spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
