--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.3'
 }
 
+
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
@@ -22,9 +23,14 @@ repositories {
 }
 
 dependencies {
+	// Lambda Local
+	implementation 'org.springframework.cloud:spring-cloud-function-web:3.2.8'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.1.2'
+	implementation 'com.amazonaws:aws-lambda-java-core:1.2.1'
+	implementation 'software.amazon.awssdk:lambda:2.17.71'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
